--- a/css/sub_design_responsive.css
+++ b/css/sub_design_responsive.css
@@ -533,7 +533,7 @@
   }
   #main .contentswrap {
     text-align: center;
-    height: 550px;
+    height: 600px;
   }
   #main > .contentswrap > .title {
     width: 70%;
@@ -564,9 +564,10 @@
     transform: translateX(-50%);
     font-size: 14px;
     line-height: 22px;
+    width: 80%;
   }
   #cardnews_1 {
-    margin-top: 550px;
+    margin-top: 600px;
   }
   #cardnews_1 ul {
     padding-top: 50px;
@@ -599,7 +600,7 @@
   }
   #main_webbanner > .contentswrap > .title > .logo {
     margin: 0 auto;
-    width: 190px;
+    width: 170px;
     font-size: 24px;
     padding-bottom: 10px;
   }
@@ -650,7 +651,7 @@
   }
   #main_webpage > .contentswrap > .title > .logo {
     margin: 0 auto;
-    width: 190px;
+    width: 160px;
     font-size: 24px;
     padding-bottom: 10px;
   }
