--- a/css/master.css
+++ b/css/master.css
@@ -986,20 +986,15 @@ section {
   .answer_mobile {
     display : visible;
   }
-  ul#main_nav li:first-child {
+  ul#main_nav > li:first-child {
     margin-top: 103px;
   }
-  /* NAV */
-  ul#main_nav{
+
+  /* MAIN NAV */
+  ul#main_nav {
     width: 70%;
-    background: #fff;
-    position: absolute;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    overflow: auto;
   }
-  ul#main_nav li h3 {
+  ul#main_nav > li > h3  {
     height: 45px;
     padding-left: 30px;
     line-height: 50px;
@@ -1008,13 +1003,13 @@ section {
     color: #8081d9;
     cursor: pointer;
   }
-  ul#main_nav li h3 button {
+  ul#main_nav > li > h3 > button {
     font-size: 18px;
   }
-  ul#main_nav li.active ul.sub_nav li{
+  ul#main_nav > li.active > ul.sub_nav > li{
     height: 40px;
   }
-  ul#main_nav li ul.sub_nav li a{
+  ul#main_nav > li > ul.sub_nav > li > a{
     padding-left: 60px;
     line-height: 40px;
     height: 40px;
@@ -1023,13 +1018,8 @@ section {
     background-color: #9b9ce8;
     transition-duration: 0.3s;
   }
-  #main_nav_wrap label.bg_close {
+  #main_nav_wrap > label.bg_close {
     width: 30%;
-    height: 100%;
-    position: absolute;
-    right: 70%; top: 0; bottom: 0;
-    background: rgba(0, 0, 0, 0.5);
-    transform: rotateZ(0deg);
   }
   .arrow-down {
     position: absolute;
@@ -1038,6 +1028,7 @@ section {
     font-size: 30px;
     transform: rotateZ(0deg);
   }
+
   /* GOMAIN */
   .myname {
     position: absolute;
